# roku-patch-stability-analytics

./: .gitignore  03_ml_modeling_regressor_classifier.ipynb  README.md  pyproject.toml  requirements.txt  risk_gate.py  scored_test_patch_features.csv  test_patch_features.csv
.github/workflows/: risk_gate.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: monitoring_priority.csv  test_patch_features.csv
data/Processed/: device_inventory.csv  error_rates.csv  error_spikes.csv  firmware_features_ml.csv  firmware_metadata.csv  firmware_qa_priority.csv  monitoring_priority.csv  pre_post_errors.csv  rma_by_error.csv  rma_by_firmware.csv  stability_curves.csv  synthetic_firmware_features_50rows.csv
data/Raw/: device_events.csv  firmware_releases.csv  support_tickets.csv
db/: roku_telemetry.db
notebooks/: 00_generate_raw_data.ipynb  01_baseline_sql_analytics.ipynb  01_feature_engineering_sql.ipynb  02_advanced_features.ipynb  02a_data_synthesis_and _feature_building.ipynb  03_ml_modeling_regressor_classifier.ipynb  04_qa_prioritization_and_CI_risk_gate_demo.ipynb  04_synthesis_data.ipynb  05_device_monitoring.ipynb  06_continuous_retraining_pipeline.ipynb  scored_synthetic_firmware_features_50rows.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
sql/: 00_schema_ddl.sql  01_baseline_kpis.sql
src/: config.py
tests/: __init__.py  test_risk_gate.py
(+1 files in other folders)
